CU-02 completado
- Se implemento la busqueda de una agencia por identificador
- Se creo una nueva validacion para el JWT en caso de no traer el autenticator en los encabezados
- Se documento el metodo GET para buscar una agencia
